test_suite/tests/ui/malformed_env_attr.stderr
error: expected #[env("...")]
 --> tests/ui/malformed_env_attr.rs:5:5
  |
5 |     #[env(PORT)]
  |     ^^^^^^^^^^^^
