test_suite/tests/ui/malformed_env_attr.rs
use configloader::ConfigLoader;

#[derive(ConfigLoader)]
struct Config {
    #[env(PORT)]
    port: u16,
}

fn main() {}
